@@ -11,6 +11,7 @@ Changes since 20040818a:
 - Cleanup: Make debug output of configuration parser consistent.
 - Documentation: revise hostname documentation
 - Documentation: revise filterfile manual page
+- Feature: new option timeout_delaybody. Suggested by Cory C. Albrecht.
 
 20040818a: Changes since 20040813a:
 - Feature: forward ported the "noread" feature from leafnode-1,
